# lms-fastapi

./: .gitignore  lms.db  pyproject.toml
app/: database.py  dependencies.py  main.py
app/crud/: course.py  enrollment.py  user.py
app/models/: __init__.py  course.py  enrollment.py  user.py
app/routers/: courses.py  enrollments.py  users.py
app/schemas/: course.py  enrollment.py  user.py
app/utils/: auth.py
tests/: test_users.py
